Ensure image cropper button drawer is on top of image cropper range slider

--- a/src/Umbraco.Web.UI.Client/src/less/property-editors.less
+++ b/src/Umbraco.Web.UI.Client/src/less/property-editors.less
@@ -649,6 +649,7 @@
         display: flex;
         justify-content: flex-end;
         padding: 10px;
+        position: relative;
 
         button {
             margin-left: 4px;
